# snake

./: Cargo.toml  cbindgen.toml  snake.h
assets/: circle.dds  cross.dds  ring.dds
snake_bevy/: Cargo.toml
snake_bevy/assets/: ground.glb
snake_bevy/src/: ground_mesh.rs  lib.rs  line_poly.rs  lines.rs  logic.rs  main.rs  obj_ground_loader.rs
snake_move/: Cargo.toml
snake_move/src/: snake_move.rs
src/: c_exports.rs  lib.rs  line_poly.rs  main.rs  snake_move.rs  test_plugin.rs
