[package]
name = "snake"
version = "0.1.0"
authors = ["lessball@hotmal.com <lessball@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9", default_features = false, features = ["bevy_asset", "bevy_winit", "render", "png", "x11"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
glam = { version = "0.22.0", optional = true}

[features]
default = ["bevy", "serde", "serde_json"]
clib = ["glam"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "snake"
required-features = [ "bevy" ]
