[package]
name = "snake_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snake_move = { path = "../snake_move" }
bevy = { version = "0.12", default_features = false }
# bevy_prototype_debug_lines = { version = "0.11.1", features = ["3d"], optional = true }
parry3d = "0.13.5"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["sl", "render"]
sl = [ "serde", "serde_json", "snake_move/serde" ]
render = [
    "bevy/bevy_asset",
    "bevy/bevy_scene",
    "bevy/bevy_winit",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_pbr",
    "bevy/bevy_gltf",
    "bevy/bevy_render",
    "bevy/multi-threaded",
    "bevy/ktx2",
    "bevy/zstd",
    "bevy/x11",
    "bevy/tonemapping_luts",
    # "bevy_prototype_debug_lines",
]

